--- a/vanilla_frontend/index.html
+++ b/vanilla_frontend/index.html
@@ -3,24 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Filter Table Vanilla</title>
+        <link rel="stylesheet" href="./styles/style.css">
+        <title>React vs Vanilla - Filter Pokemon</title>
     </head>
     <body>
-        <div>
-            <div class="filter-fields">
-                <label>Poke ID:</label>
-                <input type="text" class="filter-input">
-                <label>Pokemon Name:</label>
-                <input type="text" class="filter-input">
-                <label>Type(s):</label>
-                <input type="text" class="filter-input">
-                <label>Height:</label>
-                <input type="text" class="filter-input">
-                <label>Weight:</label>
-                <input type="text" class="filter-input">
-            </div>
-            <div class="dt-content">
-                <table id="data-table"></table>
+        <div id="root">
+            <div class="app">
+                <h1>PokeDex Vanilla</h1>
+                <div class="dt-content">
+                    <table>
+                        <thead>
+                            <th>Poke ID:</th>
+                            <th>Pokemon:</th>
+                            <th>Type(s):</th>
+                            <th>Height:</th>
+                            <th>Weight:</th>
+                        </thead>
+                        <tr class="filter-input">
+                            <td><input type="text" class="filter-input"></td>
+                            <td><input type="text" class="filter-input"></td>
+                            <td><input type="text" class="filter-input"></td>
+                            <td><input type="text" class="filter-input"></td>
+                            <td><input type="text" class="filter-input"></td>
+                        </tr>
+                        <tbody id="data"></tbody>
+                    </table>
+                </div>
             </div>
         </div>
         <script src="./scripts/index.js"></script>
