--- a/vanilla_frontend/index.html
+++ b/vanilla_frontend/index.html
@@ -31,7 +31,6 @@
                 </div>
             </div>
         </div>
-        <script src="./scripts/index.js"></script>
-        <script src="./scripts/filter.js"></script>
+        <script type="module" src="./scripts/index.js"></script>
     </body>
 </html>
